2011-11-27 Pierre Wieser <pwieser@trychlos.org>

	* src/nact/nact-assistant-export.ui: Let the format selection be scrolled.

	* src/core/na-gtk-utils.c (dump_children):
	Also dump the address of the child widget.
	Also dump children which do not have a name (dynamically allocated).

2011-11-26 Pierre Wieser <pwieser@trychlos.org>

	* src/nact/nact-tree-ieditable.c (do_insert_before): Re-reverse the list
	before returning so that the list returns as unchanged to the caller.

	* src/io-desktop/nadp-desktop-file.c (nadp_desktop_file_new_from_uri):
	Slightly optimize code.

	* src/core/na-importer.c (na_importer_import_from_list): Fix comments.

	* src/io-xml/naxml-reader.c (naxml_reader_import_from_uri): Do not return
	any error message if we do not identify at least a well-formed document
	with a known root node.

	* src/api/na-boxed.h:
	* src/api/na-timeout.h:
	* src/core/na-boxed.c:
	* src/core/na-data-boxed.c:
	* src/core/na-gconf-migration.c:
	* src/core/na-gconf-monitor.c:
	* src/core/na-gconf-utils.c:
	* src/core/na-icontext.c:
	* src/core/na-iduplicable.c:
	* src/core/na-iprefs.c:
	* src/core/na-object-item.c:
	* src/core/na-object.c:
	* src/core/na-settings.c:
	* src/core/na-updater.c: Only reference minor version in 'Since:' and
	'Deprecated' comments.

	* run-autogen.sh: Change development installation directory to _install.

	* configure.ac: gtk-doc and gnome-doc-utils are no more mandatory packages.

	m4_ifdef is not a good way to test if these packages are available, as the
	m4 files default ot be distributed.

	* Makefile.am: Explicitely disable scrollkeeper here when making distcheck.

2011-11-25 Pierre Wieser <pwieser@trychlos.org>

	* docs/nact/Makefile.am: Fully review the NACT User's Manual build.

	* configure.ac: gtk-doc and gnome-doc-utils are no more mandatory packages.

	* Makefile.am:
	No more try to rebuild manuals when making distcheck.
	Move gnome-doc-utils.make and gtk-doc.make to MAINTAINERCLEANFILES target.

	* run-autogen.sh: